# navas_pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
tests/: test_extractors.py  test_loaders.py  test_transformers.py
