[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipelinex"
version = "0.1.0"
description = "A flexible ELT pipeline implementation in Python"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.0",
    "requests>=2.0",
    "sqlalchemy>=1.4",
]

[project.urls]
Homepage = "https://github.com/yourusername/pipelinex"